# nerdobd2

./: .gitignore  .gitmodules  CMakeLists.txt  common.h  config.h.in  config.ini  config.ini.example  core.c  core.h  db_common.c  db_common.h  gpsd.c  httpd.c  httpd.h  json.h  kw1281.c  kw1281.h  output_canbus.c  output_csv.c  output_postgres.c  output_postgres.h  output_sqlite.c  output_sqlite.h  output_test.c  output_udp.cpp  output_websocket.cpp  plugins.c  plugins.h  postgres2json.c  secondary_telemetry.c  sqlite2json.c
cmake/Modules/: FindGPSD.cmake
gps/: datalogger.c  datalogger.h  gps.c  gpsd.c  gpsd.h  lowlevel.c
